hphp/test/slow/hack_mode/closing-tag-script.php.expectf
Fatal error: HH mode: </script> not allowed (Line: %d, Char: %d)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/test/slow/hack_mode/closing-tag-script.php on line 2
